--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<meta name="author" content="Crimson">
 	<title>Crimson - LE site de streaming</title>
-	<meta name="description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
-	<meta property="og:title" content="Crimson - LE site de streaming" />
-    <meta property="og:description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
-    <meta property="og:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png" />
-    <meta property="og:url" content="https://crimson-streaming.github.io/crimson/" />
-	<meta property="og:site_name" content="Crimson">
-	<meta property="twitter:title" content="Crimson - LE site de streaming" />
-	<meta property="twitter:url" content="https://crimson-streaming.github.io/crimson/" />
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
-    <link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
+<!-- Meta Description -->
+<meta name="description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
 
-	<meta name="apple-mobile-web-app-capable" content="yes"> <!-- Active le mode plein écran -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Gère la barre de statut -->
-    <meta name="theme-color" content="#b81b0e"> <!-- Couleur pour Android -->
-    <link rel="manifest" href="pwa/manifest.json"> <!-- Lien vers le manifeste -->
-    <link rel="apple-touch-icon" href="img/logo-mobile.png"> <!-- Icône pour iOS -->
+<!-- Open Graph Metadata (Facebook, LinkedIn, etc.) -->
+<meta property="og:title" content="Crimson - LE site de streaming" />
+<meta property="og:description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
+<meta property="og:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png" />
+<meta property="og:url" content="https://crimson-streaming.github.io/crimson/" />
+<meta property="og:site_name" content="Crimson" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card Metadata -->
+<meta name="twitter:title" content="Crimson - LE site de streaming" />
+<meta name="twitter:description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png" />
+<meta name="twitter:url" content="https://crimson-streaming.github.io/crimson/" />
+
+<!-- Image for Legacy Platforms -->
+<link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/assets/og-image.png" />
+
 
 <!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
@@ -144,40 +148,6 @@
 		.search .search-input input[type=text].focus {
 			background: #0d071e !important;
 		}
-/* Appliquer la couleur à la zone de l'encoche (barre de statut) sur iPhone */
-body {
-  background-color: #0d071e; /* Applique la couleur de fond générale */
-  margin-top: env(safe-area-inset-top); /* Décale le contenu sous la safe area (zone de l'encoche) */
-}
-
-/* Zone de la safe area (couleur de fond) */
-.safe-area-top {
-  height: env(safe-area-inset-top); /* Hauteur égale à la safe area */
-  background-color: #0d071e; /* Couleur de fond */
-  position: fixed; /* Fixe en haut de l'écran */
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1; /* Elle est derrière la navbar */
-}
-
-/* Navbar (header) */
-.header-section {
-  position: relative; /* Position normale */
-  z-index: 10; /* Navbar doit être au-dessus de la couleur de la safe area */
-}
-
-/* Quand la navbar devient fixe */
-.header-section.pin {
-  position: fixed;
-  top: env(safe-area-inset-top); /* Commence après la safe area */
-  left: 0;
-  right: 0;
-  width: 100%;
-  z-index: 2; /* Navbar reste au-dessus de la safe area */
-}
-
-
 </style>
 </head>
 <!-- Start Header -->
@@ -185,8 +155,6 @@ body {
 	<!-- Start Navigation Area -->
 
 	<!-- Start Navigation Area -->
-<div class="safe-area-top"></div> <!-- Zone pour l'encoche -->
-<header class="header-section">
 	<div class="main-menu">
 		<nav class="header-section pin-style">
 			<div class="container-fluid">
