--- a/404.html
+++ b/404.html
@@ -121,7 +121,7 @@
                                     <ul class="nav vfx-item-nav">
                                         <li><a  href="https://crimson-streaming.github.io/crimson/" class="" title="home">Home</a></li>
                                         <li><a href="https://crimson-streaming.github.io/crimson/films.html" class="" title="Films">Films</a></li>
-                                        <li><a href=https://crimson-streaming.github.io/crimson/direct.html" class="" title="En direct">En direct</a>
+                                        <li><a href=https://crimson-streaming.github.io/crimson/direct.html" class="" title="En direct">En direct</a></li>
                                     </div>
                                 </div>
                             </div>
