--- a/test.html
+++ b/test.html
@@ -89,24 +89,24 @@
 
                                <!-- soon pwa -->
     <!-- LOAD LOCAL CSS -->
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/megamenu.css">
-  <link rel="stylesheet" href="../css/style-three.css" id="theme">
-  <link rel="stylesheet" href="../css/ionicons.css">
-  <link rel="stylesheet" href="../css/font-awesome.min.css">
-  <link rel="stylesheet" href="../css/responsive.css">
-  <link rel="stylesheet" href="../css/splide.min.css">
-  <link rel="stylesheet" href="../css/player-crimson.css">
-  <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
-  <link rel="stylesheet" href="../css/search.css">
-  <link rel="stylesheet" href="../css/validatesecurity.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/megamenu.css">
+  <link rel="stylesheet" href="css/style-three.css" id="theme">
+  <link rel="stylesheet" href="css/ionicons.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/splide.min.css">
+  <link rel="stylesheet" href="css/player-crimson.css">
+  <link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
+  <link rel="stylesheet" href="css/search.css">
+  <link rel="stylesheet" href="css/validatesecurity.css">
 
 
     <!-- Player -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
 
     <!-- SweetAlert2 -->
-    <script src="../js/sweetalert2@11.js"></script>
+    <script src="js/sweetalert2@11.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
@@ -144,7 +144,7 @@
         <div class="mod-menu">
           <div class="row">
             <div class="col-2"> 
-              <a href="../index.html" title="logo" class="logo"><img src="../img/logo.png" alt="logo" title="logo"></a>
+              <a href="index.html" title="logo" class="logo"><img src="img/logo.png" alt="logo" title="logo"></a>
             </div>
             <div class="col-7 nav-order-last nopadding">
               <div class="main-nav leftnav">
@@ -153,9 +153,9 @@
                 </ul>
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
-                    <li><a href="../index.html" class="" title="home">Home</a></li>
-                    <li><a href="../films.html" class="Active" title="Films">Films</a></li>
-                    <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
+                    <li><a href="index.html" class="" title="home">Home</a></li>
+                    <li><a href="films.html" class="Active" title="Films">Films</a></li>
+                    <li style="border-bottom: 0px solid !important;"><a href="direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
                   </ul>
                 </div>
@@ -186,7 +186,7 @@
           <div class="row mt-30">
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="video-posts-data mt-0 mb-0">
-                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/3-jours-max/3-jours-max-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
+                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(img/film/3-jours-max/3-jours-max-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
                   <div class="d-flex dtl-title-block mb-2">  
                     <h1 class="mb-0" style="font-weight: bold;">3 jours max</h1>
                   </div>
@@ -219,8 +219,8 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="auto" poster=../img/film/3-jours-max/3-jours-max-slider.jpg>
-          <source src="https://box-1011-u.vmeas.cloud/hls/xqx2ofdthnokjiqbte4shmadvfpa5wzjgjbvpo56d,uyd44kpjwiy6mp26xfq,5kd44kpjwitsz6k6toq,.urlset/master.m3u8" type="application/x-mpegURL">
+        <video id="player" playsinline controls preload="auto" poster=img/film/3-jours-max/3-jours-max-slider.jpg>
+          <source src="https://matoc22140.cloudmatoc.com/files/aa/8nb7aCbGVL1OCHFIj6dVfDdWovltHdWQB7X.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
@@ -228,11 +228,11 @@
        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
        <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
        <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-       <script src="../js/FWDEVPlayer.js"></script>
-       <script src="../js/bootstrap.min.js"></script>
-       <script src="../js/jquery.nice-select.min.js"></script>  
-       <script src="../js/megamenu.js"></script> 
-       <script src="../js/custom-main.js"></script>
+       <script src="js/FWDEVPlayer.js"></script>
+       <script src="js/bootstrap.min.js"></script>
+       <script src="js/jquery.nice-select.min.js"></script>  
+       <script src="js/megamenu.js"></script> 
+       <script src="js/custom-main.js"></script>
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
        <script type="text/javascript">
@@ -351,7 +351,7 @@ async function showSuggestions(query) {
 
   if (!query) return; // Si la requête est vide, ne rien faire
 
-  const response = await fetch('../search/d.json');
+  const response = await fetch('search/d.json');
   const movies = await response.json();
 
   const filteredMovies = movies.filter(movie => movie.nom.toLowerCase().includes(query.toLowerCase()));
