--- a/film/1up.html
+++ b/film/1up.html
@@ -9,9 +9,86 @@
   <title>Crimson | Regarder 1UP en streaming</title>
   <meta name="description" content="Crimson | Regarder 1UP en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="1up.html">
-  <link rel="icon" type="image/png" href="../img/favicon/favicon.png">
+  <!-- Favicon -->
+	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<script type="text/javascript">
+        function isInWebIntoApp() {
+            var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+            // Vérifie si le user agent contient "wv" pour WebView
+            return /wv/.test(userAgent);
+        }
+
+        if (isInWebIntoApp()) {
+
+            setTimeout(function() {
+                window.location.href = "https://crimson-streaming.github.io/crimson/pages/déinstallation.html";
+            }, 2000);
+        }
+        if (isInWebIntoApp()) {
+
+            window.location.href = "intent://crimson-streaming.github.io/crimson/pages/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
+        }
+</script>
+<script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function() {
+        if (window.self !== window.top) {
+
+            const popup = document.createElement('div');
+            popup.style.position = 'fixed';
+            popup.style.top = '-30px';
+            popup.style.left = '0';
+            popup.style.width = '100vw';
+            popup.style.height = '100vh';
+            popup.style.backgroundColor = '#0d0620';
+            popup.style.display = 'flex';
+            popup.style.flexDirection = 'column';
+            popup.style.justifyContent = 'center';
+            popup.style.alignItems = 'center';
+            popup.style.zIndex = '9999';
+            popup.style.textAlign = 'center';
+            popup.style.color = '#333';
+
+            const style = document.createElement('style');
+            style.innerHTML = `
+                @keyframes pulse {
+                    0% {
+                        transform: scale(1);
+                    }
+                    50% {
+                        transform: scale(1.1);
+                    }
+                    100% {
+                        transform: scale(1);
+                    }
+                }
+                .pulse-animation {
+                    animation: pulse 1s infinite;
+                }
+            `;
+            document.head.appendChild(style);
 
 
+            popup.innerHTML = `
+                <img src="https://crimson-streaming.github.io/crimson/img/logo.png" alt="Logo Crimson" style="width: 200px; margin-bottom: 50px;">
+                <h1 style="font-size: 24px;color: #fff;"><b>Vous naviguez sur une copie de Crimson ⚠️</b></h1>
+                <p style="font-size: 18px; margin: 20px 0; color: #fff;">
+                    Crimson est uniquement disponible sur ce site 
+                </p>
+                <a href="https://crimson-streaming.github.io/crimson/" target="_blank" class="pulse-animation" style="background-color: #b81b0e; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; text-decoration: none; margin: 5px; display: inline-block;">
+                    Accéder au site Crimson
+                </a>
+    
+            `;
+
+            document.body.appendChild(popup);
+        }
+    });
+</script>
+
+
+                               <!-- soon pwa -->
+    <!-- LOAD LOCAL CSS -->
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/megamenu.css">
   <link rel="stylesheet" href="../css/style-three.css" id="theme">
@@ -23,19 +100,42 @@
   <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
   <link rel="stylesheet" href="../css/search.css">
   <link rel="stylesheet" href="../css/validatesecurity.css">
-  <link rel="stylesheet" href="../css/global.css">
-  <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
 
-  <!-- SweetAlert2 -->
-  <script src="../js/sweetalert2@11.js"></script>
+
+    <!-- Player -->
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
+
+    <!-- SweetAlert2 -->
+    <script src="js/sweetalert2@11.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
 
 
+
+  <style type="text/css">
+
+    .search .search-input input[type=text]::placeholder, .search .search-input input[type=text].focus {
+        background: #0d071e !important;
+    } .vibrating-button {
+            padding: 10px 16px;
+            background-color: #b81b0e;
+            color: white;
+            border: none;
+            font-size: 16px;
+            border-radius: 14px;
+            transition: background-color 0.3s ease, transform 0.2s;
+            cursor: pointer;
+            margin-top: 0px;
+            margin-bottom: 35px;
+        }
+
+        .vibrating-button:hover {
+            background-color: #b81b0e !important;
+            transform: scale(1.05);
+        }</style>
 </head>
 <body>
-
 <header>
   <!-- Start Navigation Area -->
   <div class="main-menu"> 
@@ -44,7 +144,7 @@
         <div class="mod-menu">
           <div class="row">
             <div class="col-2"> 
-              <a href="../index.html" title="logo" class="logo"><img src="../img/logo.png" alt="logo" title="logo"></a>
+              <a href="index.html" title="logo" class="logo"><img src="img/logo.png" alt="logo" title="logo"></a>
             </div>
             <div class="col-7 nav-order-last nopadding">
               <div class="main-nav leftnav">
@@ -53,9 +153,9 @@
                 </ul>
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
-                    <li><a href="../index.html" class="" title="home">Home</a></li>
-                    <li><a href="../films.html" class="" title="Films">Films</a></li>
-                    <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
+                    <li><a href="index.html" class="" title="home">Home</a></li>
+                    <li><a href="films.html" class="Active" title="Films">Films</a></li>
+                    <li style="border-bottom: 0px solid !important;"><a href="direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
                   </ul>
                 </div>
