--- a/film/2-fast-2-furious.html
+++ b/film/2-fast-2-furious.html
@@ -24,7 +24,8 @@
   <link rel="stylesheet" href="../css/search.css">
   <link rel="stylesheet" href="../css/validatesecurity.css">
   <link rel="stylesheet" href="../css/global.css">
-  <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
+      <!-- Player -->
+      <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
 
   <!-- SweetAlert2 -->
   <script src="../js/sweetalert2@11.js"></script>
