Ajout de 3000 films à la base de données

--- a/film/2-fast-2-furious.html
+++ b/film/2-fast-2-furious.html
@@ -37,46 +37,46 @@
 </head>
 <body>
 
-<header>
-  <!-- Start Navigation Area -->
-  <div class="main-menu"> 
-    <nav class="header-section pin-style">
-      <div class="container-fluid">
-        <div class="mod-menu">
-          <div class="row">
-            <div class="col-2"> 
-              <a href="../index.html" title="logo" class="logo"><img src="../img/logo.png" alt="logo" title="logo"></a>
-            </div>
-            <div class="col-7 nav-order-last nopadding">
-              <div class="main-nav leftnav">
-                <ul class="top-nav">
-                  <li class="visible-this d-md-none menu-icon"> <a href="#" class="navbar-toggle collapsed" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false" title="menu-toggle"><i class="fa fa-bars"></i></a> </li>
-                </ul>
-                <div id="menu" class="collapse header-menu">
-                  <ul class="nav vfx-item-nav">
-                    <li><a href="../index.html" class="" title="home">Home</a></li>
-                    <li><a href="../films.html" class="" title="Films">Films</a></li>
-                    <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
-                    <ul class="dm-align-2 mega-list">
+  <header>
+    <!-- Start Navigation Area -->
+    <div class="main-menu"> 
+      <nav class="header-section pin-style">
+        <div class="container-fluid">
+          <div class="mod-menu">
+            <div class="row">
+              <div class="col-2"> 
+                <a href="../index.html" title="logo" class="logo"><img src="../img/logo.png" alt="logo" title="logo"></a>
+              </div>
+              <div class="col-7 nav-order-last nopadding">
+                <div class="main-nav leftnav">
+                  <ul class="top-nav">
+                    <li class="visible-this d-md-none menu-icon"> <a href="#" class="navbar-toggle collapsed" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false" title="menu-toggle"><i class="fa fa-bars"></i></a> </li>
                   </ul>
+                  <div id="menu" class="collapse header-menu">
+                    <ul class="nav vfx-item-nav">
+                      <li><a href="../index.html" class="" title="home">Home</a></li>
+                      <li><a href="../films.html" class="Active" title="Films">Films</a></li>
+                      <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
+                      <ul class="dm-align-2 mega-list">
+                    </ul>
+                  </div>
                 </div>
               </div>
+              <div class="col-3"> 
+                <div class="right-sub-item-area">
+                  <div class="search-item-block">
+                  <form class="navbar-form navbar-left">
+                    <a type="submit" href="#popup1" class="btn btn-default open" title="search"><i class="fa fa-search"></i></a>
+                  </form>
+                  </div>
+                </div>      
+              </div>
             </div>
-            <div class="col-3"> 
-							<div class="right-sub-item-area">
-							  <div class="search-item-block">
-								<form class="navbar-form navbar-left">
-								  <a type="submit" href="#popup1" class="btn btn-default open" title="search"><i class="fa fa-search"></i></a>
-								</form>
-							  </div>
-							</div>      
-						</div>
-          </div>
-        </div>        
-      </div>
-    </nav>
-  </div>
-</header>
+          </div>        
+        </div>
+      </nav>
+    </div>
+  </header>
   <div class="page-content-area vfx-item-ptb pt-0">
     <div class="container-fluid">
       <div class="row">
