--- a/film/1up.html
+++ b/film/1up.html
@@ -144,7 +144,7 @@
         <div class="mod-menu">
           <div class="row">
             <div class="col-2"> 
-              <a href="index.html" title="logo" class="logo"><img src="img/logo.png" alt="logo" title="logo"></a>
+              <a href="../index.html" title="logo" class="logo"><img src="../img/logo.png" alt="logo" title="logo"></a>
             </div>
             <div class="col-7 nav-order-last nopadding">
               <div class="main-nav leftnav">
@@ -153,9 +153,9 @@
                 </ul>
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
-                    <li><a href="index.html" class="" title="home">Home</a></li>
-                    <li><a href="films.html" class="Active" title="Films">Films</a></li>
-                    <li style="border-bottom: 0px solid !important;"><a href="direct.html" class="" title="En direct">En direct</a>
+                    <li><a href="../index.html" class="" title="home">Home</a></li>
+                    <li><a href="../films.html" class="Active" title="Films">Films</a></li>
+                    <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
                   </ul>
                 </div>
