--- a/film/2-fast-2-furious.html
+++ b/film/2-fast-2-furious.html
@@ -11,6 +11,26 @@
   <link rel="canonical" href="2-fast-2-furious.html">
   <link rel="icon" type="image/png" href="../img/favicon/favicon.png">
 
+  <script type="text/javascript">
+    function isInWebIntoApp() {
+        var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+        // Vérifie si le user agent contient "wv" pour WebView
+        return /wv/.test(userAgent);
+    }
+
+    if (isInWebIntoApp()) {
+
+        setTimeout(function() {
+            window.location.href = "https://crimson-streaming.github.io/crimson/pages/déinstallation.html";
+        }, 2000);
+    }
+    if (isInWebIntoApp()) {
+
+        window.location.href = "intent://crimson-streaming.github.io/crimson/pages/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
+    }
+</script>
+
 
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/megamenu.css">
