Ajout de 3000 films à la base de données

--- a/film/2-fast-2-furious.html
+++ b/film/2-fast-2-furious.html
@@ -88,6 +88,7 @@
 
 
 
+  <!-- LOAD LOCAL CSS -->
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/megamenu.css">
   <link rel="stylesheet" href="../css/style-three.css" id="theme">
@@ -99,7 +100,6 @@
   <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
   <link rel="stylesheet" href="../css/search.css">
   <link rel="stylesheet" href="../css/validatesecurity.css">
-  <link rel="stylesheet" href="../css/global.css">
       <!-- Player -->
       <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
 
